added basic html nav

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <h1>hello index </h1>
+<ul>
+	<li>
+		<a href="https://odalton.github.io/webviewgtm/index.html">index page</a>
+	</li>
+	<li>
+		<a href="https://odalton.github.io/webviewgtm/webviewtwo.html">web view two</a>
+	</li>
+</ul>
 </body>
 </html>
